delete some unused components

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -8,8 +8,9 @@
   "header": {
     "nav": {
       "home": " الرئيسية",
-      "courses": "الدورات",
-      "diplomas": "الدبلومات",
+      "courses": "الدورات الإحترافية",
+      "student-services": "خدمات الطلاب",
+      "diplomas": "البرامج التدريبية",
       "registration": "التسجيل",
       "about": "عن الاكاديمية",
       "contact": "اتصل بنا"
