--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,6 +9,7 @@
     "nav": {
       "home": "Home",
       "courses": "Courses",
+      "student-services": "Student Services",
       "diplomas": "Diplomas",
       "registration": "Registration",
       "about": "About",
