Unite The File Names

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -19,7 +19,7 @@
 
   "footer": {
     "copyright": "All rights reserved to Applied Skills Training Academy © 2025",
-    "address": "Riyadh, Saudi Arabia"
+    "address": "Dammam, Saudi Arabia"
   },
 
   "home": {
