edit the 2 languages data file

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -2,7 +2,8 @@
   "global": {
     "academyName": "اكاديمية المهارات التطبيقية",
     "loading": "يتم التحميل...",
-    "readMore": "اقرأ المزيد"
+    "readMore": "اقرأ المزيد",
+    "downloadProfile": "الملف التعريفي"
   },
 
   "header": {
@@ -22,15 +23,29 @@
     "address": "الشرقية - دمام المملكة العربية السعودية"
   },
 
+  "hero": {
+    "title": "اكاديمية المهارات التطبيقية",
+    "subtitle": "طريقك إلى الإحتراف المهني",
+    "downloadButton": "الملف التعريفي",
+    "registerButton": "التسجيل"
+  },
+
   "home": {
     "hero": {
-      "title": "طريقك إالى الإحتراف المهني",
+      "title": "طريقك إلى الإحتراف المهني",
       "subtitle": "برامج احترافية مصممة لنجاحك"
     },
     "stats": {
       "students": "الطلاب",
-      "courses": "  الدورات الاحترافية"
+      "courses": "الدورات الاحترافية"
     }
+  },
+
+  "about": {
+    "title": "من نحن؟",
+    "description1": "أكاديمية المهارات التطبيقية ليست مجرد أكاديمية تدريب؛ نحن مسار مهني تدريبي احترافي يؤهل الى سوق العمل, صمم ليحول المعرفة النظرية إلى مهارات عملية مطلوبة ومعتمدة ومرخصة من المؤسسة العامة للتدريب التقني والمهني. وتؤمن بأن الاحتراف المهني في العمل يبدأ بالتدريب، ولذا تبنينا منهجية تطبيقية مرنة تضمن لك اكتساب الخبرة الحقيقية.",
+    "description2": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة.",
+    "description3": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
   },
 
   "courses": {
@@ -63,11 +78,165 @@
     }
   },
 
+  "visionMission": {
+    "title": "الرؤية والرسالة والقيم",
+    "vision": {
+      "title": "الرؤية",
+      "description": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
+    },
+    "mission": {
+      "title": "الرسالة",
+      "description": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
+    },
+    "values": {
+      "title": "القيم",
+      "description": "الابتكار، التميز، المصداقية، الالتزام، المرونة."
+    },
+    "ourValues": {
+      "title": "قيمنا",
+      "excellence": {
+        "title": "التميز",
+        "description": "نلتزم بأعلى معايير الجودة في تصميم وتنفيذ برامجنا التدريبية، ونسعى دائمًا لتحقيق التميز في كل ما نقدمه."
+      },
+      "innovation": {
+        "title": "الابتكار",
+        "description": "نتبنى أحدث الأساليب التعليمية والتقنيات التكنولوجية لضمان مواكبة التطورات المستمرة في سوق العمل."
+      },
+      "credibility": {
+        "title": "المصداقية",
+        "description": "نؤمن بالشفافية والمصداقية في جميع تعاملاتنا ونتائجنا، ونسعى لبناء ثقة طويلة الأمد مع متعاملينا."
+      },
+      "commitment": {
+        "title": "الالتزام",
+        "description": "نلتزم بتقديم أفضل الخدمات التدريبية وندعم متدربينا من البداية إلى النهاية لضمان تحقيق أهدافهم."
+      },
+      "flexibility": {
+        "title": "المرونة",
+        "description": "نوفر برامج تدريبية مرنة تناسب احتياجات المتدربين المختلفة وتتماشى مع متطلبات سوق العمل المتغيرة."
+      }
+    }
+  },
+
+  "benefits": {
+    "certificates": {
+      "title": "شهادات معتمدة",
+      "items": [
+        "شهادات معترف بها محليًا ودوليًا",
+        "اعتماد من جهات مهنية متخصصة",
+        "شهادات رقمية يمكن التحقق منها",
+        "توثيق للمهارات المكتسبة"
+      ]
+    },
+    "trainers": {
+      "title": "مدربون خبراء",
+      "items": [
+        "مدربون من أصحاب الخبرة العملية",
+        "خبراء في مجالات تخصصهم",
+        "مهارات تدريبية متقدمة",
+        "دعم مستمر من المدربين"
+      ]
+    },
+    "platform": {
+      "title": "منصة تعليمية متطورة",
+      "items": [
+        "منصة تعليمية تفاعلية",
+        "محتوى متاح على مدار الساعة",
+        "تقنيات تعليمية حديثة",
+        "تجربة تعلم مريحة"
+      ]
+    }
+  },
+
   "buttons": {
     "profile-file": "الملف الشخصي",
     "submit": "إرسال",
     "send": "إرسال",
-    "register": "سجل الآن"
+    "register": "سجل الآن",
+    "next": "التالي",
+    "previous": "السابق",
+    "complete": "إتمام",
+    "cancel": "إلغاء",
+    "save": "حفظ",
+    "edit": "تعديل",
+    "delete": "حذف",
+    "view": "عرض",
+    "download": "تحميل",
+    "upload": "رفع",
+    "search": "بحث",
+    "filter": "تصفية",
+    "sort": "ترتيب"
+  },
+
+  "programs": {
+    "hero": {
+      "title": "برامجنا التدريبية",
+      "subtitle": "دبلومات احترافية معتمدة"
+    },
+    "selection": {
+      "title": "اختر البرنامج المناسب لك",
+      "description": "نقدم مجموعة متنوعة من البرامج التدريبية التي تناسب مختلف الاحتياجات المهنية"
+    },
+    "overview": {
+      "title": "نظرة عامة على البرنامج",
+      "description": "تعرف على تفاصيل البرنامج ومميزاته"
+    },
+    "curriculum": {
+      "title": "المنهج الدراسي",
+      "description": "المواد والمهارات التي ستتعلمها"
+    },
+    "requirements": {
+      "title": "متطلبات البرنامج",
+      "description": "الشروط والمؤهلات المطلوبة"
+    },
+    "instructor": {
+      "title": "مدرب البرنامج",
+      "description": "تعرف على مدربينا الخبراء"
+    },
+    "faq": {
+      "title": "الأسئلة الشائعة",
+      "description": "إجابات على استفساراتك"
+    }
+  },
+
+  "registration": {
+    "title": "التسجيل في البرنامج",
+    "subtitle": "خطوات بسيطة للانضمام إلينا",
+    "personalInfo": {
+      "title": "المعلومات الشخصية",
+      "description": "أدخل بياناتك الأساسية"
+    },
+    "programSelection": {
+      "title": "اختيار البرنامج",
+      "description": "اختر البرنامج الذي يناسبك"
+    },
+    "payment": {
+      "title": "الدفع",
+      "description": "اختر طريقة الدفع المناسبة"
+    },
+    "confirmation": {
+      "title": "تأكيد التسجيل",
+      "description": "تم استلام طلبك بنجاح"
+    }
+  },
+
+  "messages": {
+    "success": {
+      "registration": "تم التسجيل بنجاح",
+      "submission": "تم إرسال الطلب بنجاح",
+      "payment": "تمت عملية الدفع بنجاح",
+      "update": "تم التحديث بنجاح"
+    },
+    "error": {
+      "general": "حدث خطأ ما",
+      "network": "مشكلة في الاتصال بالإنترنت",
+      "validation": "يرجى التحقق من البيانات المدخلة",
+      "payment": "فشلت عملية الدفع"
+    },
+    "info": {
+      "loading": "جاري التحميل...",
+      "processing": "جاري المعالجة...",
+      "noData": "لا توجد بيانات متاحة"
+    }
   },
 
   "seo": {
@@ -78,6 +247,18 @@
     "courses": {
       "title": "الدورات | اكاديمية المهارات التطبيقية",
       "description": "تصفح الدورات الاحترافية في اكاديمية المهارات التطبيقية"
+    },
+    "programs": {
+      "title": "البرامج | اكاديمية المهارات التطبيقية",
+      "description": "استكشف البرامج التدريبية المعتمدة في اكاديمية المهارات التطبيقية"
+    },
+    "about": {
+      "title": "من نحن | اكاديمية المهارات التطبيقية",
+      "description": "تعرف على اكاديمية المهارات التطبيقية ورؤيتنا ورسالتنا"
+    },
+    "registration": {
+      "title": "التسجيل | اكاديمية المهارات التطبيقية",
+      "description": "سجل في برامجنا التدريبية الاحترافية الآن"
     }
   },
 
@@ -85,6 +266,14 @@
     "404": {
       "title": "الصفحة غير موجودة",
       "message": "الصفحة التي تبحث عنها غير موجودة"
+    },
+    "500": {
+      "title": "خطأ في الخادم",
+      "message": "حدث خطأ داخلي، يرجى المحاولة مرة أخرى"
+    },
+    "network": {
+      "title": "مشكلة في الاتصال",
+      "message": "يرجى التحقق من اتصالك بالإنترنت"
     }
   }
 }
