more edits for dynamic data for the 2 languages

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -70,6 +70,7 @@
     "title": "دوراتنا",
     "description": "استكشف دوراتنا الاحترافية لتحقيق نجاحك",
     "targetJobs": "الوظائف المستهدفة",
+    "seats": "مقعد",
     "card": {
       "duration": "المدة",
       "level": "المستوى"
