--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -70,6 +70,7 @@
     "title": "Our Courses",
     "description": "Explore our professional courses",
     "targetJobs": "Target Jobs",
+    "seats": "seat",
     "card": {
       "duration": "Duration",
       "level": "Level"
