--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -18,7 +18,7 @@
       "registration": "Registration",
       "about": "About Us",
       "aboutAcademy": "About Academy",
-      "standarts": "Our Standards",
+      "team": "Our Team",
       "contact": "Contact us"
     },
     "mobile": {
