Update navigation and localization for academic standards

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -18,7 +18,7 @@
       "registration": "التسجيل",
       "about": "من نحن",
       "aboutAcademy": "عن الأكاديمية",
-      "team": "فريق العمل",
+      "standarts": "معايير الأكاديمية",
       "contact": "اتصل بنا"
     },
     "mobile": {
