Change The Kind Of courses dropdown menu to be categories dropped with it sup categories, some edits in font sizes

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -68,6 +68,7 @@
 
   "courses": {
     "title": "دوراتنا",
+    "certificates": "جميع الشهادات",
     "description": "استكشف دوراتنا الاحترافية لتحقيق نجاحك",
     "targetJobs": "الوظائف المستهدفة",
     "seats": "مقعد",
