--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -3,7 +3,8 @@
     "academyName": "اكاديمية المهارات التطبيقية",
     "loading": "يتم التحميل...",
     "readMore": "اقرأ المزيد",
-    "downloadProfile": "الملف التعريفي"
+    "downloadProfile": "الملف التعريفي",
+    "phoneNumber": "966920016205+"
   },
 
   "header": {
@@ -38,7 +39,7 @@
 
   "footer": {
     "copyright": "جميع الحقوق محفوظة لاكاديمية المهارات التطبيقية © 2025",
-    "address": "الشرقية - دمام المملكة العربية السعودية"
+    "address": "الشرقية - الدمام - المملكة العربية السعودية"
   },
 
   "hero": {
