Add localization for course details in Arabic and English; update CourseCard to use localized text and conditionally render icons based on language.

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -4,6 +4,7 @@
     "loading": "يتم التحميل...",
     "readMore": "اقرأ المزيد",
     "downloadProfile": "الملف التعريفي",
+    "details": "تفاصيل",
     "phoneNumber": "966920016205+"
   },
 
