--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,7 @@
     "loading": "Loading...",
     "readMore": "Read more",
     "downloadProfile": "Profile File",
+    "details": "Details",
     "phoneNumber": "+966920016205"
   },
 
