set the english data of the footer

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -40,9 +40,14 @@
 
   "footer": {
     "copyright": "جميع الحقوق محفوظة لاكاديمية المهارات التطبيقية © 2025",
-    "address": "الشرقية - الدمام - المملكة العربية السعودية"
+    "address": "الشرقية - الدمام - المملكة العربية السعودية",
+    "ourDiplomas": "برامجنا",
+    "quickLinks": "روابط سريعة",
+    "followUs": "تابعنا على",
+    "message": "نقدم تعليمًا أكاديميًا وتدريبًا تقنيًا معتمدًا لتأهيل الكوادر الوطنية لسوق العمل بما يتوافق مع رؤية المملكة 2030",
+    "newsLetter": "اشترك في نشرتنا البريدية",
+    "newsLetterDescription": "اشترك في نشرتنا البريدية للحصول على أخر الأخبار والعروض التي تخصك وتساعدك على تحقيق احترافك المهني."
   },
-
   "hero": {
     "title": "اكاديمية المهارات التطبيقية",
     "subtitle": "طريقك إلى الإحتراف المهني",
