Edit Course Page So It Fit ar and en

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -74,9 +74,12 @@
   },
 
   "courses": {
-    "title": "دوراتنا",
+    "title": "دورات مهنية احترافية",
     "certificates": "جميع الشهادات",
-    "description": "استكشف دوراتنا الاحترافية لتحقيق نجاحك",
+    "description":{
+      "1": "طور مهاراتك مع",
+      "2": "أفضل دورات التدريب الاحترافية"
+    },
     "targetJobs": "الوظائف المستهدفة",
     "seats": "مقعد",
     "card": {
