edit the registration component so it ft the ar and en languages

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -85,12 +85,20 @@
     "card": {
       "duration": "المدة",
       "level": "المستوى"
+    },
+    "selection": {
+      "title": "اختر الدورة المناسبة لك",
+      "description": "دورات قصيرة متخصصة تركز على مهارات محددة"
     }
   },
 
   "diplomas": {
     "title": "البرامج التدريبية",
-    "description": "دبلومات معتمدة مع تدريب عملي"
+    "description": "دبلومات معتمدة مع تدريب عملي",
+    "selection": {
+      "title": "اختر البرنامج المناسب لك",
+      "description": "برامج شاملة وطويلة الأجل لشهادة دوبلوم معترف بها"
+    }
   },
 
   "forms": {
@@ -203,10 +211,6 @@
       "title": "برامجنا التدريبية",
       "subtitle": "دبلومات احترافية معتمدة"
     },
-    "selection": {
-      "title": "اختر البرنامج المناسب لك",
-      "description": "نقدم مجموعة متنوعة من البرامج التدريبية التي تناسب مختلف الاحتياجات المهنية"
-    },
     "overview": {
       "title": "نظرة عامة على البرنامج",
       "description": "تعرف على تفاصيل البرنامج ومميزاته"
@@ -230,15 +234,32 @@
   },
 
   "registration": {
-    "title": "التسجيل في البرنامج",
-    "subtitle": "خطوات بسيطة للانضمام إلينا",
+    "title": {
+      "1": "سجل الآن",
+      "2": "وابدأ طريقك إلى الإحتراف المهني"
+    },
+    "subtitle":{
+      "1": "البيانات المرسلة سيتم إرسالها إلى",
+      "2": "منسق التسجيل"
+    },
+    "security": {
+      "1": "بياناتك محمية وآمنة",
+      "2": "نسخة ترسل لبريدك",
+      "3": "تأكيد فوري"
+    },
     "personalInfo": {
       "title": "المعلومات الشخصية",
-      "description": "أدخل بياناتك الأساسية"
+      "description": "أدخل بياناتك الأساسية",
+      "fullName": "الاسم الكامل",
+      "email": "البريد الإلكتروني",
+      "phone": "رقم الهاتف",
+      "emergencyPhone": "رقم الطوارئ",
+      "idNumber": "رقم الهوية",
+      "degree": "المؤهل"
     },
     "programSelection": {
-      "title": "اختيار البرنامج",
-      "description": "اختر البرنامج الذي يناسبك"
+      "title": "اختر نوع البرنامج",
+      "description": "اختر ما إذا كنت تريد التسجيل في دورة أم برنامج دبلوم"
     },
     "payment": {
       "title": "الدفع",
