edit some data in about us components

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -70,7 +70,7 @@
     "title": "من نحن؟",
     "description1": "أكاديمية المهارات التطبيقية ليست مجرد أكاديمية تدريب؛ نحن مسار مهني تدريبي احترافي يؤهل الى سوق العمل, صمم ليحول المعرفة النظرية إلى مهارات عملية مطلوبة ومعتمدة ومرخصة من المؤسسة العامة للتدريب التقني والمهني. وتؤمن بأن الاحتراف المهني في العمل يبدأ بالتدريب، ولذا تبنينا منهجية تطبيقية مرنة تضمن لك اكتساب الخبرة الحقيقية.",
     "description2": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة.",
-    "description3": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
+    "description3": "أكاديمية المهارات التطبيقية أول خطوة نحو رحلة التميز المهني, وحافز للتطويرالذي يفتح امامك فرص عمل"
   },
 
   "courses": {
@@ -121,37 +121,37 @@
     "title": "الرؤية والرسالة والقيم",
     "vision": {
       "title": "الرؤية",
-      "description": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
+      "description": "الريادة والإحترافية في بناء مجتمع متمكن متطور ومنتج"
     },
     "mission": {
       "title": "الرسالة",
-      "description": "أكاديمية المهارات التطبيقية انطلاقة نحو اكتساب المزيد من المهارات التي تضعك في صدارة المنافسة."
+      "description": "تقديم خدمات تدريبية واستشارية متكاملة للأفراد والمؤسسات وتنظيم اختبرات دولية والمساهمة في التنمية المستدامة"
     },
     "values": {
       "title": "القيم",
       "description": "الابتكار، التميز، المصداقية، الالتزام، المرونة."
     },
     "ourValues": {
-      "title": "قيمنا",
+      "title": "خمسة محاور لتدريب إحترافي متكامل",
       "excellence": {
-        "title": "التميز",
-        "description": "نلتزم بأعلى معايير الجودة في تصميم وتنفيذ برامجنا التدريبية، ونسعى دائمًا لتحقيق التميز في كل ما نقدمه."
+        "title": "أنماط التدريب",
+        "description": "توفير خيارات متنوعة تشمل أنماط التدريب الحضــوري والتدريب عن بعــد (الإلكتروني) والمدمــج لتناســب احتياجــات المتــدربين."
       },
       "innovation": {
-        "title": "الابتكار",
-        "description": "نتبنى أحدث الأساليب التعليمية والتقنيات التكنولوجية لضمان مواكبة التطورات المستمرة في سوق العمل."
+        "title": "جودة المحتوى",
+        "description": "الاعتمــاد على مناهج محدثــة ومعــايير عالميــة، باشــراف مدربين خبــراء ومتخصصين."
       },
       "credibility": {
-        "title": "المصداقية",
-        "description": "نؤمن بالشفافية والمصداقية في جميع تعاملاتنا ونتائجنا، ونسعى لبناء ثقة طويلة الأمد مع متعاملينا."
+        "title": "منهجية التدريب",
+        "description": "تعتمــد على التفاعــل العملي، والتمــارين والتجــارب الواقعيــة والمحاكــاة لتمكــن المتــدرب من ممارســة العمل فعليًا."
       },
       "commitment": {
-        "title": "الالتزام",
-        "description": "نلتزم بتقديم أفضل الخدمات التدريبية وندعم متدربينا من البداية إلى النهاية لضمان تحقيق أهدافهم."
+        "title": "تطوير المهارات",
+        "description": "الذي يضــمن لك الخبــرة العمليــة الكافية والتي تغطي أغلــب ساعات الدورة التدريبيــة ولا نكتفــي بالجانــب النظــري فقط."
       },
       "flexibility": {
-        "title": "المرونة",
-        "description": "نوفر برامج تدريبية مرنة تناسب احتياجات المتدربين المختلفة وتتماشى مع متطلبات سوق العمل المتغيرة."
+        "title": "الشراكات الإستراتيجية",
+        "description": "لضــمان اكتســاب المتدربين للمهــارات العمليــة المطلوبــة مباشــرة من أصحاب العمل"
       }
     }
   },
