--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -71,7 +71,7 @@
     "title": "About Us?",
     "description1": "Applied Skills Training Academy is not just a training academy; we are a professional training career path that qualifies you for the job market, designed to transform theoretical knowledge into practical, required, accredited, and licensed skills by the General Organization for Technical and Vocational Training. We believe that professional excellence at work begins with training, so we have adopted a flexible applied methodology that ensures you gain real experience.",
     "description2": "Applied Skills Training Academy is a launch towards acquiring more skills that put you at the forefront of competition.",
-    "description3": "Applied Skills Training Academy is a launch towards acquiring more skills that put you at the forefront of competition."
+    "description3": "Our professional career path begins with training, and we are ready to guide you towards acquiring more skills that put you at the forefront of competition and the job market."
   },
 
   "courses": {
@@ -123,11 +123,11 @@
     "title": "Vision, Mission, and Values",
     "vision": {
       "title": "Vision",
-      "description": "Applied Skills Training Academy is a launch towards acquiring more skills that put you at the forefront of competition."
+      "description": "Our ambition and refinement in building a competent and innovative community"
     },
     "mission": {
       "title": "Mission",
-      "description": "Applied Skills Training Academy is a launch towards acquiring more skills that put you at the forefront of competition."
+      "description": "To provide comprehensive training resources for professionals in the field of technology. To establish a long-term sustainable development and to contribute to the development of the academy."
     },
     "values": {
       "title": "Values",
